--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -72,7 +72,7 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>井信息列表</cite></a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a onclick="xadmin.add_tab('用户列表(静态表格)','member-list.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>用户列表(静态表格)</cite></a>
@@ -104,7 +104,7 @@
                                             <cite>等级管理</cite></a>
                                     </li>
                                 </ul>
-                            </li>
+                            </li>-->
                         </ul>
                     </li>
                     <li>
@@ -123,18 +123,23 @@
                     </li>
                     <li>
                         <a href="javascript:;">
-                            <i class="iconfont left-nav-li" lay-tips="分类管理">&#xe723;</i>
-                            <cite>分类管理</cite>
+                            <i class="iconfont left-nav-li" lay-tips="文件管理">&#xe723;</i>
+                            <cite>文件管理</cite>
                             <i class="iconfont nav_right">&#xe697;</i></a>
                         <ul class="sub-menu">
                             <li>
-                                <a onclick="xadmin.add_tab('多级分类','cate.html')">
+                                <a onclick="xadmin.add_tab('文件列表','/fileListPage')">
                                     <i class="iconfont">&#xe6a7;</i>
-                                    <cite>多级分类</cite></a>
+                                    <cite>文件列表</cite></a>
+                            </li>
+                            <li>
+                                <a onclick="xadmin.add_tab('回收站','/fileRecyclePage')">
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>回收站</cite></a>
                             </li>
                         </ul>
                     </li>
-                    <li>
+                    <!--<li>
                         <a href="javascript:;">
                             <i class="iconfont left-nav-li" lay-tips="城市联动">&#xe723;</i>
                             <cite>城市联动</cite>
@@ -146,7 +151,7 @@
                                     <cite>三级地区联动</cite></a>
                             </li>
                         </ul>
-                    </li>
+                    </li>-->
                     <li sec:authorize="hasRole('ROLE_admin')">
                         <a href="javascript:;">
                             <i class="iconfont left-nav-li" lay-tips="管理员管理">&#xe726;</i>
@@ -207,11 +212,11 @@
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>CI/CD平台</cite></a>
                             </li>
-                            <li>
+                            <!--<li>
                                 <a onclick="xadmin.add_tab('更新日志','log.html')">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>更新日志</cite></a>
-                            </li>
+                            </li>-->
                         </ul>
                     </li>
 
