--- a/web/src/main/resources/templates/welcome.html
+++ b/web/src/main/resources/templates/welcome.html
@@ -18,7 +18,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="layui-col-md12">
+               <!-- <div class="layui-col-md12">
                     <div class="layui-card">
                         <div class="layui-card-header">数据统计</div>
                         <div class="layui-card-body ">
@@ -120,7 +120,7 @@
                             </p>
                         </div>
                     </div>
-                </div>
+                </div>-->
                 <div class="layui-col-md12">
                     <div class="layui-card">
                         <div class="layui-card-header">系统信息</div>
@@ -138,7 +138,7 @@
                                         <td>LINUX</td></tr>
                                     <tr>
                                         <th>运行环境</th>
-                                        <td>Cenos7 / mysql5.6</td></tr>
+                                        <td>Cenos8 / mysql5.6</td></tr>
                                     <tr>
                                         <th>JAVA版本</th>
                                         <td>1.8</td></tr>
